demo/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-nginx-deployment
spec:
  selector:
    matchLabels:
      app: demo-nginx
  replicas: 2 # tells deployment to run 2 pods matching the template
  template:
    metadata:
      labels:
        app: demo-nginx
    spec:
      containers:
      - name: demo-nginx
        image: nginx:latest
        ports:
        - containerPort: 80
