demo/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: service-demo-nginx
spec:
  ports:
  - port: 8090
    targetPort: 80
  selector:
    app: demo-nginx
  type: ClusterIP
