demo/ingress.yaml
---
apiVersion: networking.k8s.io/v1  
kind: Ingress
metadata:
  name: ingress-demo-nginx
spec:
  ingressClassName: nginx
  rules:
  - host: ingress.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          serviceName: service-demo-nginx
          servicePort: 80
